packages/edxml-test-corpus/edxml_test_corpus-3.0.0.dev2-py3-none-any.whl/edxml_test_corpus/tests/valid/merge-multiple-files/upgrade-source/expected.edxml
<?xml version="1.0" encoding="UTF-8"?>
<!--
Test if upgrading of an event source works as expected.
-->
<edxml xmlns="http://edxml.org/edxml" version="3.0.0">
  <ontology>
    <objecttypes/>
    <concepts/>
    <eventtypes/>
    <sources>
      <source uri="/a/" description="changed-description" date-acquired="20200101" version="4"/>
    </sources>
  </ontology>
</edxml>
