packages/edxml-test-corpus/edxml_test_corpus-3.0.0.dev2-py3-none-any.whl/edxml_test_corpus/tests/invalid/ontology/unknown-ontology-subelement.edxml
<?xml version="1.0" encoding="UTF-8"?>
<!--
Testing event definition validation, verify
if an unknown ontology sub-element is rejected.
-->
<edxml xmlns="http://edxml.org/edxml" version="3.0.0">
  <ontology>
    <objecttypes/>
    <concepts/>
    <eventtypes/>
    <whatever/>
    <sources/>
  </ontology>
</edxml>
